Add LinkedIn and GitHub

--- a/config.toml
+++ b/config.toml
@@ -33,3 +33,5 @@ weight = 4
 [params]
 email = "mailto:steve@stevenwilkin.com"
 twitter = "https://twitter.com/stevebiscuit"
+linkedin = "https://www.linkedin.com/in/stevenwilkin/"
+github = "https://github.com/stevenwilkin/"
