--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://stevenwilkin.com/"
+baseURL = "https://stevenwilkin.com/"
 languageCode = "en-gb"
 title = "Steven Wilkin"
 theme = "noteworthy"
