Show 'read more' links on home page

--- a/config.toml
+++ b/config.toml
@@ -25,3 +25,4 @@ email = ""
 twitter = "https://twitter.com/stevebiscuit"
 linkedin = "https://www.linkedin.com/in/stevenwilkin/"
 github = "https://github.com/stevenwilkin/"
+showReadMore = true
